--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,9 @@ dependencies {
     // implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
 
     // Retrofit with Moshi Converter
-    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+  //  implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
