--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,9 +83,9 @@ dependencies {
     // implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     // implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
 
-    // Retrofit with Moshi Converter
-  //  implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
-    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+    // Retrofit with Moshi Converter (Object k liye) or Scalar Converter (String k liye)
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+  //  implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
 
 
     // Glide
@@ -93,4 +93,12 @@ dependencies {
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutine"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutine"
+
+    // https://mvnrepository.com/artifact/com.jakewharton.retrofit/retrofit2-kotlin-coroutines-adapter
+    implementation("com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2")
+
 }
