--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ android {
         dataBinding = true
         //        viewBinding = true
     }
+    androidExtensions{
+        experimental = true
+    }
 }
 
 dependencies {
